# test-etherium

./: .gitignore  README.md  conftest.py  env.example  pyproject.toml  pytest.ini  setup.cfg
src/applications/wallets/: apps.py  encryptors.py  models.py  querysets.py  serializers.py  urls.py  views.py
src/applications/wallets/migrations/: 0001_initial.py
src/main/: asgi.py  settings.py  urls.py  w3.py  wsgi.py
src/tests/factories/: fixtures.py  wallets.py
src/tests/functional/: test_models.py  test_views.py  test_wallets_encryptors.py
src/tests/unit/: test_application.py  test_models.py
